--- a/modules/_requestunwrapper_.html
+++ b/modules/_requestunwrapper_.html
@@ -85,13 +85,13 @@
 					<a name="unwrapputinput" class="tsd-anchor"></a>
 					<h3>unwrap<wbr>Put<wbr>Input</h3>
 					<ul class="tsd-signatures tsd-kind-function tsd-parent-kind-external-module">
-						<li class="tsd-signature tsd-kind-icon">unwrap<wbr>Put<wbr>Input<span class="tsd-signature-symbol">(</span>input<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">aws.DynamoDB.Types.PutItemInput</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">any</span></li>
+						<li class="tsd-signature tsd-kind-icon">unwrap<wbr>Put<wbr>Input<span class="tsd-signature-symbol">(</span>input<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">PutItemInput</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">any</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/13d0ba3/src/requestUnwrapper.ts#L7">requestUnwrapper.ts:7</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/7e012f7/src/requestUnwrapper.ts#L7">requestUnwrapper.ts:7</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -102,7 +102,7 @@
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
-									<h5>input: <span class="tsd-signature-type">aws.DynamoDB.Types.PutItemInput</span></h5>
+									<h5>input: <span class="tsd-signature-type">PutItemInput</span></h5>
 								</li>
 							</ul>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">any</span></h4>
