--- a/modules/_responseunwrapper_.html
+++ b/modules/_responseunwrapper_.html
@@ -89,13 +89,13 @@
 					<a name="unwrapbatchgetoutput" class="tsd-anchor"></a>
 					<h3>unwrap<wbr>Batch<wbr>Get<wbr>Output</h3>
 					<ul class="tsd-signatures tsd-kind-function tsd-parent-kind-external-module">
-						<li class="tsd-signature tsd-kind-icon">unwrap<wbr>Batch<wbr>Get<wbr>Output<span class="tsd-signature-symbol">(</span>tableSchemaOrName<span class="tsd-signature-symbol">: </span><a href="../interfaces/_tableschema_.tableschema.html" class="tsd-signature-type">TableSchema</a><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">string</span>, response<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">aws.DynamoDB.Types.BatchGetItemOutput</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">[]</span></li>
+						<li class="tsd-signature tsd-kind-icon">unwrap<wbr>Batch<wbr>Get<wbr>Output<span class="tsd-signature-symbol">(</span>tableSchemaOrName<span class="tsd-signature-symbol">: </span><a href="../interfaces/_tableschema_.tableschema.html" class="tsd-signature-type">TableSchema</a><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">string</span>, response<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">BatchGetItemOutput</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">[]</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/13d0ba3/src/responseUnwrapper.ts#L62">responseUnwrapper.ts:62</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/7e012f7/src/responseUnwrapper.ts#L62">responseUnwrapper.ts:62</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -112,7 +112,7 @@
 									</div>
 								</li>
 								<li>
-									<h5>response: <span class="tsd-signature-type">aws.DynamoDB.Types.BatchGetItemOutput</span></h5>
+									<h5>response: <span class="tsd-signature-type">BatchGetItemOutput</span></h5>
 									<div class="tsd-comment tsd-typography">
 										<p>result of batchGetItem</p>
 									</div>
@@ -127,13 +127,13 @@
 					<a name="unwrapgetoutput" class="tsd-anchor"></a>
 					<h3>unwrap<wbr>Get<wbr>Output</h3>
 					<ul class="tsd-signatures tsd-kind-function tsd-parent-kind-external-module">
-						<li class="tsd-signature tsd-kind-icon">unwrap<wbr>Get<wbr>Output<span class="tsd-signature-symbol">(</span>response<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">aws.DynamoDB.Types.GetItemOutput</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">any</span></li>
+						<li class="tsd-signature tsd-kind-icon">unwrap<wbr>Get<wbr>Output<span class="tsd-signature-symbol">(</span>response<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">GetItemOutput</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">any</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/13d0ba3/src/responseUnwrapper.ts#L49">responseUnwrapper.ts:49</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/7e012f7/src/responseUnwrapper.ts#L49">responseUnwrapper.ts:49</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -144,7 +144,7 @@
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
-									<h5>response: <span class="tsd-signature-type">aws.DynamoDB.Types.GetItemOutput</span></h5>
+									<h5>response: <span class="tsd-signature-type">GetItemOutput</span></h5>
 									<div class="tsd-comment tsd-typography">
 										<p>result of getItem</p>
 									</div>
@@ -159,13 +159,13 @@
 					<a name="unwrapqueryoutput" class="tsd-anchor"></a>
 					<h3>unwrap<wbr>Query<wbr>Output</h3>
 					<ul class="tsd-signatures tsd-kind-function tsd-parent-kind-external-module">
-						<li class="tsd-signature tsd-kind-icon">unwrap<wbr>Query<wbr>Output<span class="tsd-signature-symbol">(</span>response<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">aws.DynamoDB.Types.QueryOutput</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">[]</span></li>
+						<li class="tsd-signature tsd-kind-icon">unwrap<wbr>Query<wbr>Output<span class="tsd-signature-symbol">(</span>response<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">QueryOutput</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">[]</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/13d0ba3/src/responseUnwrapper.ts#L89">responseUnwrapper.ts:89</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/7e012f7/src/responseUnwrapper.ts#L89">responseUnwrapper.ts:89</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -176,7 +176,7 @@
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
-									<h5>response: <span class="tsd-signature-type">aws.DynamoDB.Types.QueryOutput</span></h5>
+									<h5>response: <span class="tsd-signature-type">QueryOutput</span></h5>
 									<div class="tsd-comment tsd-typography">
 										<p>result of query</p>
 									</div>
@@ -191,13 +191,13 @@
 					<a name="unwrapresponseitem" class="tsd-anchor"></a>
 					<h3>unwrap<wbr>Response<wbr>Item</h3>
 					<ul class="tsd-signatures tsd-kind-function tsd-parent-kind-external-module">
-						<li class="tsd-signature tsd-kind-icon">unwrap<wbr>Response<wbr>Item<span class="tsd-signature-symbol">(</span>item<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">aws.DynamoDB.Types.AttributeValue</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">any</span></li>
+						<li class="tsd-signature tsd-kind-icon">unwrap<wbr>Response<wbr>Item<span class="tsd-signature-symbol">(</span>item<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">AttributeValue</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">any</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/13d0ba3/src/responseUnwrapper.ts#L9">responseUnwrapper.ts:9</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/7e012f7/src/responseUnwrapper.ts#L9">responseUnwrapper.ts:9</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -208,7 +208,7 @@
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
-									<h5>item: <span class="tsd-signature-type">aws.DynamoDB.Types.AttributeValue</span></h5>
+									<h5>item: <span class="tsd-signature-type">AttributeValue</span></h5>
 								</li>
 							</ul>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">any</span></h4>
@@ -220,13 +220,13 @@
 					<a name="unwrapscanoutput" class="tsd-anchor"></a>
 					<h3>unwrap<wbr>Scan<wbr>Output</h3>
 					<ul class="tsd-signatures tsd-kind-function tsd-parent-kind-external-module">
-						<li class="tsd-signature tsd-kind-icon">unwrap<wbr>Scan<wbr>Output<span class="tsd-signature-symbol">(</span>response<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">aws.DynamoDB.Types.ScanOutput</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">[]</span></li>
+						<li class="tsd-signature tsd-kind-icon">unwrap<wbr>Scan<wbr>Output<span class="tsd-signature-symbol">(</span>response<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">ScanOutput</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">[]</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/13d0ba3/src/responseUnwrapper.ts#L76">responseUnwrapper.ts:76</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/7e012f7/src/responseUnwrapper.ts#L76">responseUnwrapper.ts:76</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -237,7 +237,7 @@
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
-									<h5>response: <span class="tsd-signature-type">aws.DynamoDB.Types.ScanOutput</span></h5>
+									<h5>response: <span class="tsd-signature-type">ScanOutput</span></h5>
 									<div class="tsd-comment tsd-typography">
 										<p>result of scan</p>
 									</div>
